--- a/index.html
+++ b/index.html
@@ -15,13 +15,45 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/side.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
+<!--     <link href="assets/css/side.css" rel="stylesheet" type="text/css">
+ -->    <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/preload.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
+
+
     <!-- <link href="assets/css/textanimation.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="assets/css/background.css" rel="stylesheet" type="text/css"> -->
 </head>
 <body>
     <div id="fullpage">
+<!-- Floating Social Media bar Starts -->
+    <div class="float-sm">
+      <div class="fl-fl float-fb">
+        <i class="medium material-icons">insert_chart</i>
+        <a href="" target="_blank"> Like us!</a>
+      </div>
+      <div class="fl-fl float-tw">
+        <i class="medium material-icons">insert_chart</i>
+        <a href="" target="_blank">Follow us!</a>
+      </div>
+      <div class="fl-fl float-gp">
+        <i class="fa fa-google-plus"></i>
+        <a href="" target="_blank">Recommend us!</a>
+      </div>
+      <div class="fl-fl float-rs">
+        <i class="medium material-icons">insert_chart</i>
+        <a href="" target="_blank">Follow via RSS</a>
+      </div>
+      <div class="fl-fl float-ig">
+        <i class="medium material-icons">insert_chart</i>
+        <a href="" target="_blank">Follow us!</a>
+      </div>
+      <div class="fl-fl float-pn">
+        <i class="medium material-icons">insert_chart</i>
+        <a href="" target="_blank">Follow us!</a>
+      </div>
+    </div>
+<!-- Floating Social Media bar Ends -->
         <!-- header -->
         <div class="section col s12 bg ">
             <div class="row center rnr-parallax1">
@@ -434,67 +466,55 @@
             </div>
         </div>
         <!-- contact us -->
-        <div class= "section col s12 m10 l0 offset-l1  Contactbg1"> 
-            <div class="row center rnr-parallax3">
-                <div class="layer" data-depth="0.3">
-                    <div class="col s12 m10 l10  white-text card center">
-                        <div class="row">
-                            <div class="col s12 m6 l6">
-                                <div style="">
-                                    <span style="color: black !important; float: left; font-size: 25px; margin-top: 30px">Let's Talk</span>
-                                    <div>
-                                        <span style="color: black !important; float: left; font-size: 15px; margin-top: 30px; text-align: justify !important;">
-                                            We're ready to talk. Discover more about Deegeelab.Grab Free quote, and have a chat to<br>one of our friendly team.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 m6 l6" style="border-left: black solid 0.5px;">
-                            <form method="po st" id="form_query">
-                                <div class="row">
-                                    <div class="input-field col s12">
-                                        <input class="validate" id="field_name" name="field_name" type="text" style="color:  black !important;"> 
-                                        <label for="field_name">Full Name</label>
-                                    </div>
-                                    <div class="input-field col s12">
-                                        <input class="validate" id="field_business" name="field_business" type="text" style="color:  black !important;"> 
-                                        <label for="field_business">Business Name</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="input-field col s12">
-                                        <input class="validate" id="field_conemail" name="field_conemail" type="email" style="color: black !important;"> 
-                                        <label for="field_conemail">Contact Email</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="input-field col s6">
-                                        <input class="validate" id="field_connumber" name="field_connumber" type="number" style="color: black !important;"> 
-                                        <label for="field_email">Contact Number</label>
-                                    </div>
-                                    <div class="input-field col s6">
-                                        <input class="validate" id="field_postal" name="field_postal" type="number" style="color: black !important;"> 
-                                        <label for="field_postal">Postal Code</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="input-field col s6">
-                                        <input class="validate datepicker" id="field_date" name="field_date" type="date" style="color: black !important;">
-                                        <label for="field_date">Date</label>
-                                    </div>
-                                    <div class="input-field col s6">
-                                        <input class="validate timepicker" id="field_time" name="field_time" type="number" style="color: black !important;">
-                                        <label for="field_time">Time</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col s12">
-                                        <button class="rnr-button waves-effect waves-light" style="color: black !important;">Send</button>
-                                        </div>
-                                    </div>
-                                </form>
+        <div class="section col s12 m10 l0 offset-l1 Contactbg1">
+            <div class="col s12 m10 l10 white-text card center">
+                <div class="row">
+                    <div class="col s12 m6 l6">
+                        <div style="">
+                            <span style="color: black !important; float: left; font-size: 25px; margin-top: 30px">Let's Talk</span>
+                            <div>
+                                <span style="color: black !important; float: left; font-size: 15px; margin-top: 30px; text-align: justify !important;">We're ready to talk. Discover more about Deegeelab.Grab Free quote, and have a chat to<br>
+                                one of our friendly team.</span>
                             </div>
                         </div>
+                    </div>
+                    <div class="col s12 m6 l6" style="border-left: black solid 0.5px;">
+                        <form id="form_query" method="po st" name="form_query">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input class="validate" id="field_name" name="field_name" style="color: black !important;" type="text"> <label for="field_name">Full Name</label>
+                                </div>
+                                <div class="input-field col s12">
+                                    <input class="validate" id="field_business" name="field_business" style="color: black !important;" type="text"> <label for="field_business">Business Name</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input class="validate" id="field_conemail" name="field_conemail" style="color: black !important;" type="email"> <label for="field_conemail">Contact Email</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <input class="validate" id="field_connumber" name="field_connumber" style="color: black !important;" type="number"> <label for="field_email">Contact Number</label>
+                                </div>
+                                <div class="input-field col s6">
+                                    <input class="validate" id="field_postal" name="field_postal" style="color: black !important;" type="number"> <label for="field_postal">Postal Code</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <input class="datepicker" id="field_date" name="field_date" style="color: black !important;" type="text"> <label for="field_date">Date</label>
+                                </div>
+                                <div class="input-field col s6">
+                                    <input class="validate timepicker" id="field_time" name="field_time" style="color: black !important;" type="text"> <label for="field_time">Time</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col s12">
+                                    <button class="rnr-button waves-effect waves-light" style="color: black !important;">Send</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -524,6 +544,8 @@
     <script src="assets/js/parallax.min.js"></script> 
     <script src="assets/js/jquery.backgroundMove.js"></script>
     <script src="assets/js/pillar.js"></script>
+    <script src="assets/js/preload.js"></script>
+
     <!-- SIDE NAV JS -->
     <script> 
         $('.datepicker').pickadate({
