--- a/Lead.html
+++ b/Lead.html
@@ -16,6 +16,7 @@
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbarD.css" rel="stylesheet" type="text/css">
     <script src="assets/js/snap.svg-min.js"></script>
+
 </head>
     <body>
         <div class="container">
@@ -23,10 +24,13 @@
                 <button class="menu__handle"><span>Menu</span></button>
                 <div class="menu__inner">
                     <ul>
-                        <li><a href="#"><i class="fa fa-fw fa-home"></i><span>Home<span></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-heart"></i><span>Favs<span></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-folder"></i><span>Files<span></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-tachometer"></i><span>Stats<span></a></li>
+                        <li><a href="index.html"><i ></i><span>Home<span></a></li>
+                        <li><a href="lead.html"><i class="material-icons"></i><span>Lead Generation<span></a></li>
+                        <li><a href="marketing.html"><i ></i><span>Digital Marketing<span></a></li>
+                        <li><a href="backend.html"><i ></i><span>Customer Back End Support<span></a></li>
+                        <li><a href="frontend.html"><i ></i><span>Customer Front End Support<span></a></li>
+                        <li><a href="webdev.html"><i ></i><span>Website Development<span></a></li>
+                        <li><a href="social.html"><i ></i><span>Social Media Management<span></a></li>
                     </ul>
                 </div>
                 <div class="morph-shape" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410">
@@ -36,21 +40,30 @@
                 </div>
             </nav>
             <div class="main">
-  <div class="col s12 m7 l8">
-    <div class="card horizontal">
-      <div class="card-image">
-        <img src="assets/images/background/pillars/bg3.jpg" width="600px" height="400px">
-      </div>
-      <div class="card-stacked">
-        <div style="color: black" class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-        </div>
-        <div class="card-action">
-          <a href="#">Let's Talk</a>
-        </div>
-      </div>
-    </div>
-  </div>  
+                <div class="row">
+                    <div class="col 12 card horizontal">
+                        <div class="card-image"><img class="imgres" height="400px" src="assets/images/background/pillars/bg3.jpg" width="600px"></div>
+                        <div class="col s12 card-stacked">
+                            <div class="card-content" style="color: black">
+<h3 style="color: black; text-align: left">Lead Generation</h3>
+<p style="text-align: left">We will take care of your current customers whilst gaining more leads for your business using
+ our sales team's proven record of success. We can tie into your overarching sales plan or
+  develop a new strategy with you.</p>
+<ul style="text-align: left">
+    <li>Content Marketing</li>
+    <li>Social Media Marketing</li>
+    <li>SEO</li>
+    <li>Website Optimization</li>
+    <li>Email Marketing</li>
+
+</ul>
+                            </div>
+                            <div class="card-action">
+                                <a href="#">Let's Talk</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div><!-- /main -->
         </div><!-- /container -->
 
@@ -60,7 +73,6 @@
     <script src="assets/js/scrolloverflow.min.js"></script> 
     <script src="assets/js/jquery.fullPage.js"></script> 
     <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
-    <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/validation/jquery.validate.min.js"></script> 
     <script src="assets/js/validation/additional-methods.min.js"></script> 
     <script src="assets/js/system.js"></script> 
@@ -117,6 +129,5 @@
 
             })();
         </script>
-
 </body>
 </html>
