--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- header -->
         <div class="section col s12 bg ">
             <div class="row center rnr-parallax1">
-                <div class="layer" data-depth="0.3">
+                <div class="layer wrapper" data-depth="0.3">
                     <svg version="1.1" id="svg" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" x="0px" y="0px" viewBox="-311 185 400 400" style="enable-background:new -311 185 400 400;" xml:space="preserve">
                         <metadata>
                             <sfw  xmlns="&ns_sfw;">
@@ -336,9 +336,6 @@
                             <circle class="st1" cx="15.2" cy="490.5" r="15.5"/>
                         </a>
                     </svg>
-                    <div>
-                        <a href="#why"><img class="icondrop animated flash infinite" src="assets/images/ms.png"></a>
-                    </div>
                 </div>
             </div>
         </div>  
