--- a/frontend.html
+++ b/frontend.html
@@ -13,127 +13,72 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/jquery.fullpage.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/navbarD.css" rel="stylesheet" type="text/css">
-    <script src="assets/js/snap.svg-min.js"></script>
+    <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
+    <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
+
 
 </head>
-    <body>
-        <div class="container">
-            <nav id="menu" class="menu">
-                <button class="menu__handle"><span>Menu</span></button>
-                <div class="menu__inner">
-                    <ul>
-                        <li><a href="index.html"><i ></i><span>Home<span></a></li>
-                        <li><a href="lead.html"><i class="material-icons"></i><span>Lead Generation<span></a></li>
-                        <li><a href="marketing.html"><i ></i><span>Digital Marketing<span></a></li>
-                        <li><a href="backend.html"><i ></i><span>Customer Back End Support<span></a></li>
-                        <li><a href="frontend.html"><i ></i><span>Customer Front End Support<span></a></li>
-                        <li><a href="webdev.html"><i ></i><span>Website Development<span></a></li>
-                        <li><a href="social.html"><i ></i><span>Social Media Management<span></a></li>
-                    </ul>
-                </div>
-                <div class="morph-shape" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410">
-                    <svg width="100%" height="100%" viewBox="0 0 600 800" preserveAspectRatio="none">
-                        <path fill="none" d="M300-10c0,0,0,164,0,410c0,232,0,410,0,410"/>
-                    </svg>
-                </div>
-            </nav>
-            <div class="main">
-                <div class="row">
-                    <div class="col 12 card horizontal">
-                        <div class="card-image"><img class="imgres" height="400px" src="assets/images/background/pillars/bg3.jpg" width="600px"></div>
-                        <div class="col s12 card-stacked">
-                            <div class="card-content" style="color: black">
-<h3 style="color: black; text-align: left">Customer Support (Front End)</h3>
-<p style="text-align: left">Our team will be responsible for acting as a liaison between customers and companies. We also
- assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers.
-We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
-<ul style="text-align: left">
- <li>Resolve customer complaints via phone, email, mail, or social media.</li>
- <li>Use telephones to reach out to customers.</li>
- <li>Advise on company information.</li>
- <li>Act as the company gatekeeper.</li>
- <li>Suggest solutions for customer problems.</li>
- <li>Inform customer of deals and promotions.</li>
- <li>Sell products and services.</li>
- <li>Utilize computer technology to handle high call volumes.</li>
- <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
- <li>Close out or open call records.</li>
- <li>Read from scripts.</li>
- <li>Handle changes in service policies or renewals.</li>
-</ul>
-                            </div>
-                            <div class="card-action">
-                                <a href="#">Let's Talk</a>
+<body class="bgFRONT">
+    <div>
+        <div class="fl-fl float-fb">
+            <i class="fab fa-facebook fa-2x"></i> <a href="" target="_blank">Like us!</a>
+        </div>
+        <div class="fl-fl float-tw">
+            <i class="fab fa-twitter fa-2x"></i> <a href="" target="_blank">Follow us!</a>
+        </div>
+        <div class="fl-fl float-gp">
+            <i class="fab fa-linkedin fa-2x"></i> <a href="" target="_blank">Connect with us!</a>
+        </div>
+        <div class="fl-fl float-rs">
+            <i class="fab fa-instagram fa-2x"></i> <a href="" target="_blank">Follow us</a>
+        </div>
+    </div>
+    <div class="container">
+        <div class="section col s12 m10 l0 offset-l1">
+            <div class="row">
+                <div class="layer" data-depth="0.3">
+                    <div class="main">
+                        <div class="row">
+                            <div class="col s12 m6 l8 card">
+                                <div class="col s12 card-stacked">
+                                    <div class="card-content" style="color: black">
+                                        <h4 style="color: black; text-align: left">Customer Support (Front End)</h4>
+                                        <p style="text-align: left">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
+                                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                    <div data-collapse="collapse-content1"  data-text-close="Close">
+                                        <ul style="text-align: left">
+                                            <li>Resolve customer complaints via phone, email, mail, or social media.</li>
+                                            <li>Use telephones to reach out to customers.</li>
+                                            <li>Advise on company information.</li>
+                                            <li>Act as the company gatekeeper.</li>
+                                            <li>Suggest solutions for customer problems.</li>
+                                            <li>Inform customer of deals and promotions.</li>
+                                            <li>Sell products and services.</li>
+                                            <li>Utilize computer technology to handle high call volumes.</li>
+                                            <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
+                                            <li>Close out or open call records.</li>
+                                            <li>Read from scripts.</li>
+                                            <li>Handle changes in service policies or renewals.</li>
+                                        </ul>
+                                    </div>    
+                                    </div>
+                                    <div class="card-action">
+                                        <span><a href="index.html#services">Let's Talk</a></span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div><!-- /main -->
-        </div><!-- /container -->
-
+            </div>
+        </div>
+    </div>
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
     <script src="assets/js/scrolloverflow.min.js"></script> 
     <script src="assets/js/jquery.fullPage.js"></script> 
-    <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
-    <script src="assets/js/validation/jquery.validate.min.js"></script> 
-    <script src="assets/js/validation/additional-methods.min.js"></script> 
-    <script src="assets/js/system.js"></script> 
-    <script src="assets/js/scripts.js"></script> 
-    <script src="assets/js/navbar.js"></script> 
-    <script>
-    (function() {
-
-        function SVGMenu( el, options ) {
-            this.el = el;
-            this.init();
-        }
-
-        SVGMenu.prototype.init = function() {
-            this.trigger = this.el.querySelector( 'button.menu__handle' );
-            this.shapeEl = this.el.querySelector( 'div.morph-shape' );
-
-            var s = Snap( this.shapeEl.querySelector( 'svg' ) );
-            this.pathEl = s.select( 'path' );
-            this.paths = {
-                reset : this.pathEl.attr( 'd' ),
-                open : this.shapeEl.getAttribute( 'data-morph-open' ),
-                close : this.shapeEl.getAttribute( 'data-morph-close' )
-            };
-
-            this.isOpen = false;
-
-            this.initEvents();
-        };
-
-        SVGMenu.prototype.initEvents = function() {
-            this.trigger.addEventListener( 'click', this.toggle.bind(this) );
-        };
-
-        SVGMenu.prototype.toggle = function() {
-            var self = this;
-
-            if( this.isOpen ) {
-                classie.remove( self.el, 'menu--anim' );
-                setTimeout( function() { classie.remove( self.el, 'menu--open' );   }, 250 );
-            }
-            else {
-                classie.add( self.el, 'menu--anim' );
-                setTimeout( function() { classie.add( self.el, 'menu--open' );  }, 250 );
-            }
-            this.pathEl.stop().animate( { 'path' : this.isOpen ? this.paths.close : this.paths.open }, 350, mina.easeout, function() {
-                self.pathEl.stop().animate( { 'path' : self.paths.reset }, 800, mina.elastic );
-            } );
-            
-            this.isOpen = !this.isOpen;
-        };
-
-        new SVGMenu( document.getElementById( 'menu' ) );
-
-    })();
-    </script>
-</body>
+    <script src="assets/js/jquery.fullpage.extensions.min.js"></script>
+    <script src="assets/js/readmore.js"></script> 
 </html>
