--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <a href="" target="_blank">Follow us!</a>
       </div> -->
     </div>
-<!-- Floating Social Media bar Ends -->
     <div id="fullpage">
+
         <!-- header -->
         <div class="section col s12 bg ">
             <div class="row center rnr-parallax1">
@@ -318,7 +318,7 @@
                                 c0.4-0.1,0.7-0.4,0.7-0.6c0-0.2,0.2-0.4,0.4-0.4c0.2,0,1.2-0.4,2.1-0.8c0.9-0.4,2.5-0.9,3.6-1.1c1.1-0.1,1.9-0.4,1.9-0.6
                                 c0-0.2,1.3-0.3,2.8-0.3S17.8,468.8,17.8,468.9"/>
                         </g>
-                        <a xlink:href="social.html" class="btn tooltipped" data-position="left" data-delay="50" data-tooltip="Social Media Management">
+                        <a xlink:href="social.html" class="btn tooltipped pulse" data-position="left" data-delay="50" data-tooltip="Social Media Management">
                             <circle class="st1" cx="-221.8" cy="504.3" r="18"/>
                         </a>
                         <a xlink:href="marketing.html" class="btn tooltipped" data-position="left" data-delay="50" data-tooltip="Digital Marketing">
@@ -515,8 +515,8 @@
         </div>
     </div>
 
-    <!-- FOOTER          -->
-    <!--         
+    <!-- FOOTER -->
+          
         <div id="footer">
             <div class="row">
                 <div class="col s12">
